Finished guide for detecting Headshot